# automated-research-report-generation

./: .gitignore  deployment_details.docx  get_lib_versions.py  pyproject.toml  requirements.txt
generated_report/: How_can_generative_help_us_to_play_the_cricket_20260104_000739.docx
notebook/: experiment.ipynb  test.ipynb
research_and_analyst/backend_server/: workflow.py
research_and_analyst/notebook/: test.ipynb  test_me.ipynb
research_and_analyst/prompt_lib/: prompts.py
research_and_analyst/utils/: config_loader.py  model_loader.py
